apply plugin: "java"
apply plugin: "eclipse"
apply plugin: "idea"

sourceCompatibility = 1.11
targetCompatibility = 1.11

repositories {
  mavenCentral()
}

dependencies {
  testCompile "junit:junit:4.12"
}
test {
  testLogging {
    exceptionFormat = 'full'
    events = ["passed", "failed", "skipped"]
  }
}
